fix gap between skills sections

--- a/src/components/skills/skills.scss
+++ b/src/components/skills/skills.scss
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     margin: 80px auto 0 auto;
-    padding: 20px 0 20px 0;
+    padding: 20px 0 30px 0;
 
     h1 {
         text-align: center;
@@ -17,7 +17,7 @@
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         align-items: center;
-        gap: 10px;
+        gap: 20px;
         margin-top: 20px;
 
         .skills-card {
